--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,5 +138,6 @@
     <string name="take_photo">Take Photo</string>
     <string name="choose_from_gallery">Choose from Gallery</string>
     <string name="select_file">Select File</string>
+    <string name="no_meals">You don\'t have any meals to edit!</string>
 
 </resources>
