--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,5 +139,6 @@
     <string name="choose_from_gallery">Choose from Gallery</string>
     <string name="select_file">Select File</string>
     <string name="no_meals">You don\'t have any meals to edit!</string>
+    <string name="hold_to_delete_photo">Click and hold to remove photo.</string>
 
 </resources>
