--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Memory Bite</string>
     <string name="email">"MemoryBiteApp@gmail.com"</string>
-    <string name="version_number">Version: 1.0</string>
-    <string name="release_date">Release Date: October 1, 2015</string>
+    <string name="version_number">Version: 1.3</string>
+    <string name="release_date">Release Date: October 10, 2015</string>
     <string name="title_activity_open_screen">Memory Bite</string>
     <string name="title_activity_list_of_meals">My Meal Journal</string>
     <string name="title_activity_meal_details">Meal Details</string>
@@ -43,7 +43,7 @@
     <string name="add_new_meal">Add Meal</string>
     <string name="edit_last_meal">Edit Last Meal</string>
     <string name="view_journal">View Journal</string>
-    <string name="add_photo">Add photo!</string>
+    <string name="add_photo">Add Photo</string>
 
     <string name="action_settings">Settings</string>
     <string name="about">About</string>
@@ -52,16 +52,16 @@
 
 
     <string name="share">Share</string>
-    <string name="share_subject">Someone wants to share a Memory Bite with you from</string>
-    <string name="share_body_intro">Check out this meal I had!</string>
-    <string name="share_body_closing">If you want to start your own food journal and share memories,
-    check out www.MemoryBite.com or at the Google Play Store.</string>
+    <string name="share_subject">Someone wants to share a Memory Bite from </string>
+    <string name="share_body_intro">/nCheck out this meal I had!</string>
+    <string name="share_body_closing">If you want to start and share your own food journal,
+    check out www.MemoryBite.com or the Google Play Store.</string>
 
     <string name="send_to_chooser">Share using&#8230;</string>
     <string name="date">Date</string>
 
     <string name="dialog_delete_title">Delete?</string>
-    <string name="dialog_delete_meal">Are you sure you wish to delete this meal from your journal?
+    <string name="dialog_delete_meal">Do you really want to delete this meal?
         \nThis can\'t be undone and food can\'t be uneaten!</string>
 
     <string name="dialog_about_body">I love food and I love eating new things in new places. I
@@ -70,47 +70,51 @@
         eating interesting meals like
         gas station boudin or Commander\'s Palace turtle soup.
         \n
-        \nUnfortunately, as a side effect of this life-span shortening life style (and possibly
+        \nUnfortunately, as a side effect of this lifespan-shortening life style (and possibly
         from IPAs, sazeracs, and red wine) I found that I was having a tough time keeping it all
-        straight. After a point, there\'s just no way you can remember what was when and where with
-        who. Since I think that eating good food, especially in the company of good people, is one
-        of the greatest gifts you can ask for in life, forgetting these meals is a true sin to me.
+        straight. After a point, you can't remember what was when and where with
+        who. Since eating good food in the company of good people is one of life's great joys,
+        forgetting these meals is a true sin to me.
         \n
         \nI made a few valiant efforts at carrying a notebook, but I was always caught without it.
-        I tried tracking meals and photos in apps meant for general note taking, but it is slow,
-        cumbersome, and clunky. I wanted a better way. And, since I no longer have the distraction
-        of New Orleans food and nightlife and I might be mildly obsessive when I have projects in
-        mind, this is my attempt at a better way of remembering meals.
+        I tried general note taking apps, but it is slow, cumbersome, and clunky. I took photos
+        that just got buried in my gallery, never to be seen again. Since I no longer have the
+        distraction of New Orleans food and nightlife (and I might be mildly obsessive when a
+        project is in mind), this is my attempt at a better way of remembering meals.
         \n
-        \nThis program is a whole hearted effort to solve an admittedly first world problem and
-        get a chance to learn some new skills along the way. I am not a programmer by education or
-        occupation, but I have used this app as a proving ground to learn. I have attempted to make
-        a solid, usable product that I can build and improve on in future versions. Although I have
-        tested it for stability and usability concerns, there is a chance you might find a few bugs
-        and glitches here and there. Please, let me know what you see and I\'ll do my best to
-        correct them. Along with this, I will be updating and improving the user interface to make
-        it as efficient as possible. And hopefully prettier, too.
+        \nI am not a programmer by education or occupation, so I have been learning along the way.
+        You might find a few bugs and glitches here and there. Please, let me know and I\'ll do my
+        best to correct them. Along the way, I will be updating and improving the user interface
+        to make it as efficient as possible. And hopefully prettier, too.
         \n
-        \nNow that I have this tool that I wanted, I no longer live in New Orleans and I try to
-        spend some money on things other than restaurants, things like new clothes and actual
-        furniture. Even though I may be missing a few meals from my journal, I
-        hope it\'s something you find useful.
+        \nNow that I have the tool I wanted, I no longer live in New Orleans and I try to
+        spend money on things other than restaurants, like new clothes and actual furniture.
+        Even though I may be missing a few meals from my journal, I hope it\'s something you find
+        useful.
         \n
         \nPlease let me know your thoughts, questions, comments, or complaints.
         \nAndy Terbovich
+        \n
+        \n
+        \nNOTE: Memory Bite currently stores meals locally on your phone and references your saved
+        photos. I am working on providing cloud backup service for your journals, but for the
+        moment your meal journal is saved only on the phone your app is on. Your journal will be
+        saved when updating to newer versions of Memory Bite, but it will not carry over to new
+        phones or devices. Stay tuned for updates!
         \n
         \n
         \n
         \nSpecial thanks to:
         \nAmtrak for free WiFi through the barren desert of California\'s Central Valley.
         \nUdacity.com and Google for providing such incredible training materials.
+        \nUniversal Image Loader &#169; 2011-2015 Sergey Tarasevich
         \nThe community at StackOverflow.com. I don\'t know who you are or why you answer all the
         programming questions you do, but keep doing it.
         \nZack for helping me with a logo.
+        \nAll those who put up with my requests for beta testers along the way and for the
+        constructive and not-so-constructive criticism you gave.
         \nMy family for teaching me the value of a good meal is not just the food.
         \n
-        \n
-        \nUsing Universal Image Loader &#169; 2011-2015 Sergey Tarasevich
         \n
         \n
         &#169; 2015, Andy Terbovich. All rights reserved
@@ -121,9 +125,9 @@
     <string name="help">What is this?</string>
     <string name="dialog_help_header">How to track a Memory Bite</string>
     <string name="dialog_help_body">Memory Bite is a quick, lightweight food journal which tracks
-        photos and notes of different meals, lets you quickly flip through your previous meals, and
-        share with friends and family. It is intended to be fast and unobtrusive so that you can
-        make entries without interrupting your meal.
+        photos and notes of different meals and lets you quickly flip through your previous meals.
+        You can even share with friends and family. It is intended to be fast and unobtrusive so
+        that you can make entries without interrupting your meal.
         \n
         \nNow get started!
     </string>
@@ -132,13 +136,13 @@
     <string name="comments_suggestions">Comments or suggestions?</string>
     <string name="photo_removed">POOF! Photo removed!</string>
 
-    <string name="cant_add_photos">Can only attach 6 photos!</string>
+    <string name="cant_add_photos">Can only attach 3 photos using this version of Memory Bite!</string>
     <string name="no_data_no_save_message">But you haven\'t eaten anything?
         \nEnter some data and try again!</string>
     <string name="take_photo">Take Photo</string>
     <string name="choose_from_gallery">Choose from Gallery</string>
     <string name="select_file">Select File</string>
     <string name="no_meals">You don\'t have any meals to edit!</string>
-    <string name="hold_to_delete_photo">Click and hold to remove photo.</string>
+    <string name="hold_to_delete_photo">Click and hold to a remove photo.</string>
 
 </resources>
