--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Memory Bite</string>
     <string name="email">"MemoryBiteApp@gmail.com"</string>
+    <string-array name="email_array">
+            <item>@string/email</item>
+    </string-array>
     <string name="version_number">Version: 1.3</string>
     <string name="release_date">Release Date: October 10, 2015</string>
     <string name="title_activity_open_screen">Memory Bite</string>
@@ -144,7 +147,8 @@
     <string name="select_file">Select File</string>
     <string name="no_meals">You don\'t have any meals to edit!</string>
     <string name="hold_to_delete_photo">Click and hold to a remove photo.</string>
-    <string name="share_w_memory_bite">Email to Memory Bite!</string>
-    <string name="share_w_memory_bite_instructions">Email your meal to Memory Bite to have it displayed on our webpage!</string>
+    <string name="share_w_memory_bite">Email to Memory Bite</string>
+    <string name="share_instructions">Share with a friend</string>
+    <string name="share_w_memory_bite_instructions">Share on Memory Bite's website</string>
 
 </resources>
