--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,5 +150,6 @@
     <string name="share_w_memory_bite">Email to Memory Bite</string>
     <string name="share_instructions">Share with a friend</string>
     <string name="share_w_memory_bite_instructions">Share on Memory Bite\'s website</string>
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 
 </resources>
