Added little disclaimer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,6 +119,9 @@
         \nMy family for teaching me the value of a good meal is not just the food.
         \n
         \n
+        \nMemory Bite is provided as-is and is not responsible for any loss of user's photos,
+        written meal entries, or other data.
+        \n
         \n
         &#169; 2015, Andy Terbovich. All rights reserved
     </string>
