Reorganized Camera intent to test if file was created successfully prior to launching camera, following Google's Taking Photos Simply architecture.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,7 +159,7 @@
     -->
     <!-- Test Ad ID! -->
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
-
+    <string name="error_taking_photo">There was an error using the camera. Please try selecting a photo from the gallery. Sorry!</string>
 
 
 </resources>
