--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string-array name="email_array">
             <item>@string/email</item>
     </string-array>
-    <string name="version_number">Version: 1.3</string>
-    <string name="release_date">Release Date: October 13, 2015</string>
+    <string name="version_number">Version: 1.5</string>
+    <string name="release_date">Release Date: October 17, 2015</string>
     <string name="title_activity_open_screen">Memory Bite</string>
     <string name="title_activity_list_of_meals">My Meal Journal</string>
     <string name="title_activity_meal_details">Meal Details</string>
@@ -152,13 +152,14 @@
     <string name="hold_to_delete_photo">Click and hold to a remove photo.</string>
     <string name="share_w_memory_bite">Email to Memory Bite</string>
     <string name="share_instructions">Share with a friend</string>
-    <string name="share_w_memory_bite_instructions">Share on Memory Bite\'s website</string>
+    <string name="share_w_memory_bite_instructions">Email to Memory Bite\'s website</string>
     <!-- Live Ad ID! -->
-    <!--
     <string name="banner_ad_unit_id">ca-app-pub-5493267843150526/3921546693</string>
-    -->
     <!-- Test Ad ID! -->
+    <!--
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    -->
+
     <string name="error_taking_photo">There was an error using the camera. Please try selecting a photo from the gallery. Sorry!</string>
 
 
