--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,8 +37,8 @@
     <string name="price_4">$$$$</string>
     <string name="price_5">$$$$$</string>
 
-    <string name="save">Save</string>
-    <string name="saved_meal_message">This meal has been saved!</string>
+    <string name="save">Save Meal</string>
+    <string name="saved_meal_message">Meal saved!</string>
     <string name="cancel">Cancel</string>
     <string name="back">Back</string>
     <string name="edit">Edit</string>
@@ -46,7 +46,7 @@
     <string name="add_new_meal">Add Meal</string>
     <string name="edit_last_meal">Edit Last Meal</string>
     <string name="view_journal">View Journal</string>
-    <string name="add_photo">Add Photo</string>
+    <string name="add_photo">Add a Photo</string>
 
     <string name="action_settings">Settings</string>
     <string name="about">About</string>
@@ -163,6 +163,8 @@
 
 
     <string name="error_taking_photo">There was an error using the camera. Please try selecting a photo from the gallery. Sorry!</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
 
 
 </resources>
