DRASTIC CHANGE CAUSE I DIDN'T THINK IT'D WORK:   * Changed to PagerView between images   * Implimented custom TouchImageView to allow pinch zoom and panning for photos    * Made custom image view programming using UIL and TouchImageView instead of passing intent to gallery    * Changed DBHelper to pass ArrayList of photos not just list so that I could pass a parcelable through the activities from MealDetails to the All New Full Screen View    * Hope I didn't inadvertantly break anything.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,6 +166,7 @@
     <string name="camera">Camera</string>
     <string name="gallery">Gallery</string>
     <string name="sort_meals">Sort Meals</string>
+    <string name="Close">X</string>
 
 
 </resources>
