--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="edit_last_meal">Edit Last Meal</string>
     <string name="view_journal">View Journal</string>
     <string name="add_photo">Add a Photo</string>
+    <string name="caption">Add Caption</string>
 
     <string name="action_settings">Settings</string>
     <string name="about">About</string>
@@ -149,18 +150,11 @@
     <string name="choose_from_gallery">Choose from Gallery</string>
     <string name="select_file">Select File</string>
     <string name="no_meals">You don\'t have any meals to edit!</string>
-    <string name="hold_to_delete_photo">Click and hold to a remove photo.</string>
+    <string name="add_caption_delete_photo">Tap to add a caption.
+        \nHold to remove a photo.</string>
     <string name="share_w_memory_bite">Email to Memory Bite</string>
     <string name="share_instructions">Share with a friend</string>
     <string name="share_w_memory_bite_instructions">Email to Memory Bite\'s website</string>
-    <!-- Live Ad ID! -->
-    <!--
-    <string name="banner_ad_unit_id">ca-app-pub-5493267843150526/3921546693</string>
-    -->
-    <!-- Test Ad ID! -->
-
-    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
-
 
     <string name="error_taking_photo">There was an error using the camera. Please try selecting a photo from the gallery. Sorry!</string>
     <string name="camera">Camera</string>
@@ -175,5 +169,15 @@
     <string name="new_to_old">Newest to Oldest</string>
 
     <string name="Close">X</string>
+
+    <!-- Live Ad ID! -->
+    <!--
+    <string name="banner_ad_unit_id">ca-app-pub-5493267843150526/3921546693</string>
+    -->
+    <!-- Test Ad ID! -->
+
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="enter_caption">Enter a caption</string>
+
 
 </resources>
