CAPTIONS YES CAPTIONS. Added button to show/hide captions when viewing photos. IT'S STARTING TO BEHAVE LIKE A REAL GODDAMNED PROGRAM.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,7 +177,8 @@
     <!-- Test Ad ID! -->
 
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
-    <string name="enter_caption">Enter a caption</string>
+    <string name="enter_caption">Enter caption</string>
+    <string name="close_caption">Close</string>
 
 
 </resources>
