Added export buttons to Open Screen and Meal List activity menus. No functionality to buttons yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,7 @@
 
     <string name="enter_caption">Enter caption</string>
     <string name="close_caption">Close</string>
+    <string name="export">Export journal</string>
 
 
 </resources>
