Updated Help dialog title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
 
 
     <string name="help">What is this?</string>
-    <string name="dialog_help_header">How to track a Memory Bite</string>
+    <string name="dialog_help_header">What is Memory Bite?</string>
     <string name="dialog_help_body">Memory Bite is a quick, lightweight food journal which tracks
         photos and notes of different meals and lets you quickly flip through your previous meals.
         You can even share with friends and family. It is intended to be fast and unobtrusive so
