--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,6 +194,8 @@
         \n\nDo you wish to email or share a copy of this file now?</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
+    <string name="set_as_primary">Set as primary</string>
+    <string name="photo_options">Photo options</string>
 
 
 </resources>
