--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,6 +197,7 @@
     <string name="set_as_primary">Set as primary</string>
     <string name="photo_options">Photo options</string>
     <string name="remove">Remove from meal</string>
+    <string name="photo_set_as_primary">Photo set as primary</string>
 
 
 </resources>
