Updated search hint string to generic Search...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,7 +205,7 @@
 
     <string name="created_w_memory_bite">Created using Memory Bite.\nwww.MemoryBite.com</string>
     <string name="page">Pg.</string>
-    <string name="search_hint">Enter Restaurant or Whom Dined With</string>
+    <string name="search_hint">Search...</string>
     <string name="search_meals">Search meals</string>
 
     <string name="busy_exporting_message">Hold your horses, I\'m trying to export a file here!!
